--- a/templates/index2.html
+++ b/templates/index2.html
@@ -19,40 +19,39 @@
 <body>
     <h1>Seri Port Kontrol</h1>
     <form id="commandForm" method="post">
-        <button type="button" name="command" value="1" class="btn-ac" onclick="sendCommand(this.value)">Aç</button>
-        <button type="button" name="command" value="0" class="btn-kapat" onclick="sendCommand(this.value)">Kapat</button>
-        <button type="button" name="command" value="c" onclick="sendCommand(this.value)">Kontrol Et</button>
+        <button type="button" name="command" value="1" class="btn-ac" onclick="sendCommand('1')">Aç</button>
+        <button type="button" name="command" value="0" class="btn-kapat" onclick="sendCommand('0')">Kapat</button>
+        <button type="button" name="command" value="c" onclick="sendCommand('c')">Kontrol Et</button>
     </form>
 
     <div id="response"></div>
 
     <script>
         const responseDiv = document.getElementById('response');
-        const commandForm = document.getElementById('commandForm');
-
-        // Sayfa yüklendiğinde "c" komutunu otomatik olarak gönderelim
-        window.onload = function() {
-            sendCommand('c');
-        };
 
         function sendCommand(command) {
             const formData = new FormData();
             formData.append('command', command);
 
             fetch('/submit', {
-                method: 'POST',
+                method: 'POST',  // POST isteği olarak gönderin
                 body: formData,
             })
             .then(response => response.text())
             .then(data => {
                 responseDiv.innerHTML = data;
                 if (data === '1') {
-                    responseDiv.style.backgroundColor = '#6DBE45'; /* Koyu pastel yeşil */
+                    responseDiv.style.backgroundColor = '#6DBE45';
                 } else if (data === '0') {
-                    responseDiv.style.backgroundColor = '#D73E31'; /* Koyu pastel kırmızı */
+                    responseDiv.style.backgroundColor = '#D73E31';
                 }
             });
         }
+
+        // Sayfa yüklendiğinde "c" komutunu otomatik olarak gönderelim
+        window.onload = function() {
+            sendCommand('c');
+        };
     </script>
 </body>
 </html>
