--- a/templates/index2.html
+++ b/templates/index2.html
@@ -18,46 +18,37 @@
 </head>
 <body>
     <h1>Seri Port Kontrol</h1>
-    <form id="commandForm" method="post">
-        <button type="button" name="command" value="1" class="btn-ac" onclick="sendCommand('1')">Aç</button>
-        <button type="button" name="command" value="0" class="btn-kapat" onclick="sendCommand('0')">Kapat</button>
-        <button type="button" name="command" value="c" onclick="sendCommand('c')">Kontrol Et</button>
+    <form id="commandForm">
+        <button type="button" name="command" value="1" class="btn-ac" onclick="sendCommand(this.value)">Aç</button>
+        <button type="button" name="command" value="0" class="btn-kapat" onclick="sendCommand(this.value)">Kapat</button>
+        <button type="button" name="command" value="c" onclick="sendCommand(this.value)">Kontrol Et</button>
     </form>
 
-    <div id="response" style="background-color: #FFFFFF;"></div> <!-- Başlangıçta beyaz arka plan rengi -->
+    <div id="response"></div>
 
     <script>
         const responseDiv = document.getElementById('response');
+        const commandForm = document.getElementById('commandForm');
 
         function sendCommand(command) {
             const formData = new FormData();
             formData.append('command', command);
 
-<<<<<<< HEAD
-            fetch('/submit?command=' + command, {
-                method: 'GET',
-=======
-            fetch('/submit', {
-                method: 'POST',  // POST isteği olarak gönderin
-                body: formData,
->>>>>>> parent of f966f84 (1739)
+            fetch('/submit?command=' + command, {  // URL'ye komutu ekleyin
+                method: 'GET',  // GET isteği olarak gönderin
             })
             .then(response => response.text())
             .then(data => {
+                responseDiv.innerHTML = data;
                 if (data === '1') {
-<<<<<<< HEAD
-                    responseDiv.style.backgroundColor = '#6DBE45'; // Yeşil
+                    responseDiv.style.backgroundColor = '#6DBE45'; /* Koyu pastel yeşil */
                 } else if (data === '0') {
-                    responseDiv.style.backgroundColor = '#D73E31'; // Kırmızı
-=======
-                    responseDiv.style.backgroundColor = '#6DBE45';
-                } else if (data === '0') {
-                    responseDiv.style.backgroundColor = '#D73E31';
->>>>>>> parent of f966f84 (1739)
+                    responseDiv.style.backgroundColor = '#D73E31'; /* Koyu pastel kırmızı */
                 }
             });
         }
 
+        // Sayfa yüklendiğinde "c" komutunu otomatik olarak gönderelim
         window.onload = function() {
             sendCommand('c');
         };
