--- a/templates/index2.html
+++ b/templates/index2.html
@@ -24,7 +24,7 @@
         <button type="button" name="command" value="c" onclick="sendCommand(this.value)">Kontrol Et</button>
     </form>
 
-    <div id="response" style="background-color: #FFFFFF;"></div> <!-- Başlangıçta beyaz arka plan rengi -->
+    <div id="response"></div>
 
     <script>
         const responseDiv = document.getElementById('response');
@@ -34,15 +34,16 @@
             const formData = new FormData();
             formData.append('command', command);
 
-            fetch('/submit?command=' + command, {
-                method: 'GET',
+            fetch('/submit?command=' + command, {  // URL'ye komutu ekleyin
+                method: 'GET',  // GET isteği olarak gönderin
             })
             .then(response => response.text())
             .then(data => {
+                responseDiv.innerHTML = data;
                 if (data === '1') {
-                    responseDiv.style.backgroundColor = '#6DBE45'; // Yeşil
+                    responseDiv.style.backgroundColor = '#6DBE45'; /* Koyu pastel yeşil */
                 } else if (data === '0') {
-                    responseDiv.style.backgroundColor = '#D73E31'; // Kırmızı
+                    responseDiv.style.backgroundColor = '#D73E31'; /* Koyu pastel kırmızı */
                 }
             });
         }
