--- a/templates/index2.html
+++ b/templates/index2.html
@@ -39,11 +39,15 @@
             })
             .then(response => response.text())
             .then(data => {
-                responseDiv.innerHTML = data;
                 if (data === '1') {
+                    responseDiv.innerHTML = 'Enerji Açık';
                     responseDiv.style.backgroundColor = '#6DBE45'; /* Koyu pastel yeşil */
                 } else if (data === '0') {
+                    responseDiv.innerHTML = 'Enerji Kapalı';
                     responseDiv.style.backgroundColor = '#D73E31'; /* Koyu pastel kırmızı */
+                } else {
+                    responseDiv.innerHTML = data;
+                    responseDiv.style.backgroundColor = ''; // Varsa arka plan rengini temizle
                 }
             });
         }
