--- a/templates/index2.html
+++ b/templates/index2.html
@@ -42,8 +42,10 @@
                 responseDiv.innerHTML = data;
                 if (data === '1') {
                     responseDiv.style.backgroundColor = '#6DBE45'; /* Koyu pastel yeşil */
+                    responseDiv.innerHTML = 'Enerji Açık'; // Yanıtı "Enerji Açık" olarak değiştirin
                 } else if (data === '0') {
                     responseDiv.style.backgroundColor = '#D73E31'; /* Koyu pastel kırmızı */
+                    responseDiv.innerHTML = 'Enerji Kapalı'; // Yanıtı "Enerji Kapalı" olarak değiştirin
                 }
             });
         }
