--- a/templates/index2.html
+++ b/templates/index2.html
@@ -39,14 +39,7 @@
             })
             .then(response => response.text())
             .then(data => {
-                responseDiv.innerHTML = data;
-                if (data === '1') {
-                    responseDiv.style.backgroundColor = '#6DBE45'; /* Koyu pastel yeşil */
-                    responseDiv.innerHTML = 'Enerji Açık'; // Yanıtı "Enerji Açık" olarak değiştirin
-                } else if (data === '0') {
-                    responseDiv.style.backgroundColor = '#D73E31'; /* Koyu pastel kırmızı */
-                    responseDiv.innerHTML = 'Enerji Kapalı'; // Yanıtı "Enerji Kapalı" olarak değiştirin
-                }
+                responseDiv.innerHTML = (data === '1') ? 'Enerji Açık' : 'Enerji Kapalı';
             });
         }
 
