--- a/templates/index5.html
+++ b/templates/index5.html
@@ -19,10 +19,10 @@
 <body>
     <h1>Seri Port Kontrol</h1>
     <form id="commandForm">
-        <button type="button" name="command" value="1" class="btn-ac" onclick="sendCommand(this.value)">Aç</button>
-        <button type="button" name="command" value="0" class="btn-kapat" onclick="sendCommand(this.value)">Kapat</button>
-        <button type="button" name="command" value="c" onclick="sendCommand(this.value)">Kontrol Et</button>
-        <button type="button" name="command" value="t" onclick="sendCommand(this.value)">Type</button>
+        <button type="button" name="command" value="1" class="btn-ac" onclick="sendCommand(this.value)">Turn ON - Device</button>
+        <button type="button" name="command" value="0" class="btn-kapat" onclick="sendCommand(this.value)">Turn OFF - Device</button>
+        <button type="button" name="command" value="c" onclick="sendCommand(this.value)">Check Relay State</button>
+        <button type="button" name="command" value="t" onclick="sendCommand(this.value)">Relay Type</button>
 
     </form>
 
